[metadata]
name = pyonvista
version = attr: pyonvista.__version__
description = A tiny API for onvista.de financial website.
long_description = file: README.md, LICENSE.md
keywords = API, onvista, httpx, finance
license = MIT
classifiers =
        Programming Language :: Python :: 3"
        License :: OSI Approved :: MIT
        Operating System :: OS Independent
author = pyonvista.__author__
author_email = code@seimenadventure.de

[options]
zip_safe = False
include_package_data = True
package_dir =
    = src
packages = find:
install_requires =
    httpx >= 0.22.0
    lxml >= 4.7
    importlib; python_version >= "3.10"

[options.packages.find]
where = src

[options.extras_require]
stats_server =
    transisitions >= 0.8.11
    tabulate >=0.8.9

test =
    pytest >= 7.0.0

