[metadata]
name = pyonvista
version = attr: pyonvista.__version__
description = A tiny python API wrapper for onvista.de financial website.
long_description = file: README.md, LICENSE.md
long_description_content_type = text/markdown
keywords = API, onvista, aiohttp, finance
license = MIT
classifiers =
        Programming Language :: Python :: 3
        License :: OSI Approved :: MIT License
        Operating System :: OS Independent
author = Simon Bauer
author_email = seimen@cloasdata.de
url = https://github.com/cloasdata/pyonvista

[options]
zip_safe = False
include_package_data = True
package_dir =
    = src
packages = find:
install_requires =
    aiohttp >= 3.8.0
    importlib; python_version >= "3.10"

[options.packages.find]
where = src

[options.extras_require]
test =
    pytest >= 7.0.0

